# Dashboard-Infotainment

./: README.md
dashboard_1/: CMakeLists.txt  CMakeLists.txt.user.8d226c0  CMakeLists.txt.user.d9f3176  Main.qml  dashboard_1.qrc  main.cpp
dashboard_1/Controllers/: BluetoothManager.cpp  BluetoothManager.h  system.cpp  system.h
dashboard_1/UI/AppScreen/: AppScreen.qml  BluetoothScreen.qml  OBDScreen.qml  WifiScreen.qml  YoutubeScreen.qml
dashboard_1/UI/LeftBar/: LeftBar.qml  VolumeController.qml
dashboard_1/UI/MainScreen/: AudioInfoBox.qml  MapScreen.qml  MultiMediaWidget.qml  PlayerController.qml
dashboard_1/UI/StatusBar/: StatusBar.qml
